fix broken css

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,6 +4,16 @@
 
 @layer base {
     :root {
+        --shiki-color-text: theme('colors.white');
+        --shiki-token-constant: theme('colors.emerald.300');
+        --shiki-token-string: theme('colors.emerald.300');
+        --shiki-token-comment: theme('colors.zinc.500');
+        --shiki-token-keyword: theme('colors.sky.300');
+        --shiki-token-parameter: theme('colors.pink.300');
+        --shiki-token-function: theme('colors.violet.300');
+        --shiki-token-string-expression: theme('colors.emerald.300');
+        --shiki-token-punctuation: theme('colors.zinc.200');
+        --shiny-emerald-opaque: rgba(110, 231, 183, .5);
         --pulsing-transitioning-delay: 3s;
         --pulsing-clip-path-inset: 98%;
     }
